--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
